...
                                                            </constraints>
                                                            <color key="tintColor" red="0.76978343945205729" green="0.98039215690000003" blue="0.7284293525586355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            <state key="normal" image="rectangle.badge.checkmark" catalog="system"/>
                                                        </button>
                                                    </subviews>
                                                </stackView>
                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chore_bg" translatesAutoresizingMaskIntoConstraints="NO" id="A9j-NT-DV8">
                                                    <rect key="frame" x="16" y="23" width="50" height="50"/>
                                                    <color key="tintColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="chore_bg"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="50" id="B5D-DK-EwY"/>
                                                        <constraint firstAttribute="width" secondItem="A9j-NT-DV8" secondAttribute="height" multiplier="1:1" id="efm-xY-IBj"/>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="pyn-yp-GH6" id="eJb-Fy-AxJ"/>
                            <outlet property="delegate" destination="pyn-yp-GH6" id="2ch-JP-ofg"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Chores" id="mLC-4f-h1B"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="XMd-91-1ov" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1234.7826086956522" y="154.6875"/>
        </scene>
        <!--Chore Detail View Controller-->
...
                                <color key="backgroundColor" red="0.15999373789999999" green="0.70562808570000002" blue="0.63341881970000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="4Qp-i4-EcP"/>
                                    <constraint firstAttribute="width" constant="150" id="mXk-HO-FCv"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <state key="normal" title="All Done!">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="doneButtonTapped:" destination="7Pz-Hd-lea" eventType="touchUpInside" id="GHx-ya-jZK"/>
                                </connections>
                            </button>
...
